hphp/test/slow/coeffects/memo-make-inaccessible-parsing-bad.php.expectf
Fatal error: This function requires the defaults, leak_safe_shallow, or leak_safe_local context to be memoized using #MakeICInaccessible in %s on line 3
